Minor spacing corrections

--- a/src/styles/services.styl
+++ b/src/styles/services.styl
@@ -7,15 +7,15 @@
   width 80%
   h3
     font-size 1.6rem
-    line-height 2.4rem
+    line-height 3.2rem
   .hello
-    font-size 2.5em
-    line-height 3.5em
+    font-size 2.5rem
+    line-height 3.5rem
   #service_list
     .column
       height 330px
-      margin 1em 1.75em 1em 0
-      width calc(33% - 1.75em)
+      margin 1rem 1.75rem 1rem 0
+      width calc(33% - 1.75rem)
       position relative
       overflow hidden
       img
@@ -29,23 +29,23 @@
         width 100%
         position absolute
         bottom 0
-        padding 1.5em
+        padding 1.5rem
         background rgba(0,0,0,0.85)
         color #FFFFFF
   #methodology
     .left.aligned
       div 
-        margin 0.5em 0
-  #engagement_types
+        margin 0.5rem 0
+  #engagrement_types
     .column
       background rgba(0,0,0,0.1)
-      margin 2em
+      margin 2rem
   #benefits
-    padding-bottom 3em
+    padding-bottom 3rem
     h4
       margin 1.5rem .5rem
       text-align left
-      font-size 1.6em
+      font-size 1.6rem
       font-weight normal
     p
       display block
