--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -48,7 +48,7 @@ i.icon
   cursor pointer
 
 .ui.divider
-  margin 3rem 0 !important
+  margin 2rem 0 !important
 
 @media only screen and (min-width: $desktop-breakpoint) 
   #mobile_menu_toggle
@@ -74,7 +74,7 @@ footer
   img
     display inline-block !important
     &.logo
-      margin-top 1rrem
+      margin-top 1 rem
   span
     display inline-block
     color #000000
